can now play aginst urself, hand is updated

--- a/ScrabbleBot/ScrabbleBot.fsproj
+++ b/ScrabbleBot/ScrabbleBot.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-	  <ProjectGuid>{YourClientName}</ProjectGuid>
+	  <ProjectGuid>{10C48DD9-BC29-4ED3-B6F9-BE955ECB8B00}</ProjectGuid>
     </PropertyGroup>
 
   <ItemGroup>
